<resources>
    <string name="app_name">Watch</string>
    <string name="title_activity_time_line">TimeLineActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="s_ries">Séries</string>
    <string name="feed_principal">Publicações</string>
    <string name="pref_name">w.file</string>
    <string name="editar_post">Editar Post</string>
    <string name="salvos">Salvos</string>
    <string name="arquivados">Arquivados</string>
    <string name="publica_es">Publicações</string>
    <string name="message_arquivar">Se arquivar a publicação ela não estará mais disponível a outros usuários. Deseja
        realmente arquivar arquivá-la?
    </string>
    <string name="filmes">Filmes</string>
    <string name="outros">Outros</string>
    <string name="ajuda">Ajuda</string>
    <string name="mensagem_erro">Há campos obrigatórios em branco ou você não adiciou nenhuma série ainda. Adicione uma
        série e/ou sua opinião para prosseguir.
    </string>
    <string name="mensagem_erro_2">Você não adicionou nenhuma série com este título. Adicione-a para prosseguir.
    </string>
    <string name="aviso_dialog_capitulo">Titulo, número da temporada e número do capítulo são campos obrigatórios
    </string>
    <string name="suas_informacoes">Suas Informações</string>
    <string name="serie">Série</string>
    <string name="filme">Filme</string>
    <string name="edit_info">Editar</string>
    <string name="ver_pub">Ver Suas Publicações</string>
    <string name="pergunta">O que você deseja fazer?</string>
    <string name="perfil">Perfil</string>
    <string name="suas_pub">Suas publicações</string>
    <string name="ajuda_1">Seja bem vindo ao Watch! Aqui você pode compartilhar sua opnião sobre séries e filmes que
        você adicionar. Pena que você não adicionou nada ainda. Vamos começar?
    </string>
    <string name="vc_pode">Você pode ainda:</string>
    <string name="erro_senhas_iguais">As senhas devem ser iguais</string>
    <string name="erro_preencher">Preecha todos os dados!</string>
    <string name="erro_email">E-mail já cadastrado!</string>
    <string name="toast_logado">Parabéns! Você já está logado!</string>
    <string name="erro_login">Email e/ou senha incorreto(s)!</string>
    <string name="erro_post">Você não publicou isto.</string>
    <string name="mensagem_excluir_post">Deseja realmente excluir sua publicação?</string>
    <string name="pub_excluida">Publicação excluída</string>
    <string name="email_dev">defteros7@gmail.com</string>
    <string name="nome_dev">Artur Rocha</string>
</resources>
