<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
                android:id="@+id/posts"
                android:icon="@drawable/ic_action_posts"
                android:title="@string/publica_es"/>

        <item
                android:title="@string/filmes"
                android:id="@+id/filmes"
                android:icon="@drawable/ic_action_novo_fillme"
        />

        <item
                android:id="@+id/series"
                android:icon="@drawable/ic_action_series"
                android:title="@string/s_ries"/>

        <item
                android:id="@+id/perfil"
                android:icon="@drawable/ic_action_perfil"
                android:title="@string/perfil"/>

    </group>

    <item android:title="@string/outros">
        <menu>

            <item
                    android:id="@+id/sobre"
                    android:icon="@drawable/ic_action_help"
                    android:title="Sobre"/>
        </menu>
    </item>

</menu>
